--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,18 @@
             </intent-filter>
         </activity>
 
+        <!--<activity
+            android:name=".MessageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.APP_MESSAGING" />
+                <data android:scheme="file" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
+        </activity>-->
+
         <receiver
             android:name=".broadcast.BroadcastActivity$AirplaneModeReceiver"
             android:exported="false">
