--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,7 +13,17 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
-            android:name=".IntentActivity"
+            android:name=".taskandbackstack.TwoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".taskandbackstack.OneActivity"
+            android:exported="false"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".taskandbackstack.TaskAndBackStackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".intent.IntentActivity"
             android:exported="false" />
         <activity
             android:name=".lifecycle.LifecycleActivity"
@@ -32,18 +40,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!--<activity
-            android:name=".MessageActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
-                <category android:name="android.intent.category.APP_MESSAGING" />
-                <data android:scheme="file" />
-                <data android:mimeType="image/*" />
-            </intent-filter>
-        </activity>-->
 
         <receiver
             android:name=".broadcast.BroadcastActivity$AirplaneModeReceiver"
