--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
+            android:name=".taskandbackstack.FourActivity"
+            android:exported="false"
+            android:launchMode="singleInstance" />
+        <activity
+            android:name=".taskandbackstack.ThreeActivity"
+            android:exported="false"
+            android:launchMode="singleTask" />
+        <activity
             android:name=".taskandbackstack.TwoActivity"
             android:exported="false" />
         <activity
