--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
+            android:name=".taskandbackstack.FiveActivity"
+            android:exported="false" />
+        <activity
             android:name=".taskandbackstack.FourActivity"
             android:exported="false"
             android:launchMode="singleInstance" />
