--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
+            android:taskAffinity="@string/affinity_calculation"
+            android:name=".taskandbackstack.EightActivity"
+            android:exported="false" />
+        <activity
+            android:taskAffinity="@string/affinity_calculation"
+            android:name=".taskandbackstack.SevenActivity"
+            android:exported="false" />
+        <activity
+            android:taskAffinity="@string/affinity_calculation"
+            android:name=".taskandbackstack.SixActivity"
+            android:exported="false" />
+        <activity
             android:name=".taskandbackstack.FiveActivity"
             android:exported="false" />
         <activity
