--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
+            android:name=".sharepreference.SharePreferenceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".resources.ResourcesActivity"
+            android:configChanges="locale"
+            android:exported="false" />
+        <activity
             android:name=".userinterface.RecyclerViewActivity"
             android:exported="false" />
         <activity
