--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppTest"
         tools:targetApi="31">
         <activity
+            android:name=".database.DatabaseActivity"
+            android:exported="false" />
+        <activity
             android:name=".sharepreference.SharePreferenceActivity"
             android:exported="false" />
         <activity
